录音接口完成

--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,12 @@
                 <version>RELEASE</version>
                 <scope>compile</scope>
             </dependency>
+            <!--字符繁体简体转换-->
+            <dependency>
+                <groupId>com.github.houbb</groupId>
+                <artifactId>opencc4j</artifactId>
+                <version>1.1.0</version>
+            </dependency>
         </dependencies>
 
 <!--    </dependencyManagement>-->
