--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/storysingularity?serverTimezone=UTC&userUnicode=true&useSSL=false&
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
 
 minio.endpoint=http://192.168.100.127:9000
 minio.accessKey=admin
-minio.secretKey=minioadmin
+#minio.accessKey=minioadmin
+minio.secretKey=admin123
+#minio.secretKey=minioadmin
 minio.bucket.files=audio
